--- a/html/top.html
+++ b/html/top.html
@@ -53,13 +53,27 @@
 
 <div class="menu on"><span></span><span></span><span></span></div>
 <div class="notice-user-box">
-<div class="icon bell notice-modal-open"><img class="bellUsually click" src="../image/common/header-icon-grayBell.png" alt=""><img src="../image/common/header-icon-blueBell.svg" alt="" class="hover"><img src="../image/common/header-icon-blueBell.svg" alt="" class="bellOpen"><span class="bell-notice"></span></div>
-<div class="modal notice-modal">
+<div class="icon bell modal-open" data-modal="data-notice"><img class="bellUsually click" src="../image/common/header-icon-grayBell.png" alt=""><img src="../image/common/header-icon-blueBell.svg" alt="" class="hover"><img src="../image/common/header-icon-blueBell.svg" alt="" class="bellOpen"><span class="bell-notice"></span></div>
+
+
+
+
+<div class="hUserBox" data-modal="data-user">
+	<!-- <a href="javascript:;"> -->
+		<a href="#">
+        <div class="userImg"><span class="objectImg"><img src="http://dev.metsukete.jp/storage/img/student/avatar/user_img01.png" alt=""></span></div>
+        <p class="userName">小西 奏<span>〇〇大学／◯学部／◯学科／所属部活</span></p>
+		<img class="userArrow" src="../image/common/header-rightArrow-user-icon.svg" alt="ユーザーアイコンクリックの右矢印">
+		</a>
+</div>
+
+</div>
+<div class="modal notice-modal modal-outer">
 	<div class="modal-container notice">
 	  <!-- モーダルを閉じるボタン -->
 	  <div class="modal-close notice-modal-close"></div>
 	  <!-- モーダル内部のコンテンツ -->
-	  <div class="modal-content notice">
+	  <div class="modal-content notice" id="data-notice">
 		<div class="headLine-notice">お知らせ</div>
 		<ul class="notice-box">
 			<li>
@@ -127,26 +141,16 @@
 	  </div>
 	</div>
   </div>
-<div class="hUserBox">
-	<!-- <a href="javascript:;"> -->
-        <div class="userImg"><span class="objectImg"><img src="http://dev.metsukete.jp/storage/img/student/avatar/user_img01.png" alt=""></span></div>
-        <p class="userName">小西 奏<span>〇〇大学／◯学部／◯学科／所属部活</span></p>
-		<img class="userArrow" src="../image/common/header-rightArrow-user-icon.svg" alt="ユーザーアイコンクリックの右矢印">
-    </a>
-    <ul class="subList">
-        <li><a href="http://dev.metsukete.jp/student/profile/edit"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon08.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon08_over.png" alt="" class="hover"></span><span class="txt">プロフィール編集・確認</span></a></li>
-        <li><a href="http://dev.metsukete.jp/student/report/index"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon10.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon10_over.png" alt="" class="hover"></span><span class="txt">活動終了報告</span></a></li>
-        <li><a href="http://dev.metsukete.jp/student/setting/index"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon09.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon09_over.png" alt="" class="hover"></span><span class="txt">設定変更</span></a></li>
-        <li><a href="http://dev.metsukete.jp/student/notice/index"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon11.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon11_over.png" alt="" class="hover"></span><span class="txt">お知らせ</span></a></li>
-        <li><a href="https://metsukete-help-student.zendesk.com/hc/ja" target="_blank" rel="noopener noreferrer"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon12.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon12_over.png" alt="" class="hover"></span><span class="txt">よくある質問</span></a></li>
-        <li><a href="http://dev.metsukete.jp/student/contact"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon10.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon10_over.png" alt="" class="hover"></span><span class="txt">お問い合わせ</span></a></li>
-        <li>
-        <form name="temp_logout_form" name="form" action="http://dev.metsukete.jp/student/logout" method="POST"><input type="hidden" name="_token" value="CuMCtpSoqhSoISQrgkztmfmTIcvsJsaJO5YlDODS">                <a href="javascript:temp_logout_form.submit()"><span class="icon"><img src="http://dev.metsukete.jp/img/common/icon13.png" alt=""><img src="http://dev.metsukete.jp/img/common/icon13_over.png" alt="" class="hover"></span><span class="txt">ログアウト</span></a>
-        </li></span>
-        </form>
-    </ul>
-</div>
-</div>
+<div class="hUserBox-list" id="data-user">
+	<ul class="subList">
+		<li><a href="http://dev.metsukete.jp/student/setting/index"><span class="icon"><img src="../image/common/hUserBox-grayQuestion.svg" alt=""><img src="../image/common/hUserBox-blueQuestion.svg" alt="" class="hover"></span><span class="txt">ヘルプページ</span></a></li>
+		<li><a href="http://dev.metsukete.jp/student/notice/index"><span class="icon"><img src="../image/common/hUserBox-grayPrivacy.svg" alt=""><img src="../image/common/hUserBox-bluePrivacy.svg" alt="" class="hover"></span><span class="txt">プライバシーポリシー</span></a></li>
+		<li>
+		<form name="temp_logout_form" name="form" action="http://dev.metsukete.jp/student/logout" method="POST"><input type="hidden" name="_token" value="CuMCtpSoqhSoISQrgkztmfmTIcvsJsaJO5YlDODS">                <a href="javascript:temp_logout_form.submit()"><span class="icon"><img src="../image/common/hUserBox-grayLogout.svg" alt=""><img src="../image/common/hUserBox-blueLogout.svg" alt="" class="hover"></span><span class="txt">ログアウト</span></a>
+		</li></span>
+		</form>
+	</ul>
+	</div>
 		</header>
 		<!-- メニューボックス -->
 		<div class="menuBox">
@@ -477,5 +481,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.0.0/chartjs-plugin-datalabels.min.js"></script>
 	<script src="../js/top-page/modal-notice.js"></script>
 	<script src="../js/top-page/doughnut-chart.js"></script>
+	<script src="../js/common/hUserBox.js"></script>
 </body>
 </html>
