トップのコンテンツとチャートのタブレットレイアウトを修正済み　※まだ　お知らせ、ハンバーガー、フッターナビゲーション

--- a/html/top.html
+++ b/html/top.html
@@ -260,29 +260,50 @@
 				</div>
 												<article id="conts">
 				</article>
-				<ul class="textList">
+				<div class="top-content-box">
+				<div class="User-detail">
+					<a href="#">
+						<div class="userImg">
+							<span class="objectImg"><img src="../image/top-page/responsive/User-icon.svg" alt=""></span>
+						</div>
+						<div class="User-detail-box">
+						<p class="userName">小西 奏<span>〇〇大学／◯学部／<br class="tab-new-line">◯学科／所属部活</span></p>
+						<img class="userArrow" src="../image/common/header-rightArrow-user-icon.svg" alt="ユーザーアイコンクリックの右矢印">
+					</div>
+					</a>
+
+				</div>
+				<ul class="textList top-content">
 					<li><a href="http://dev.metsukete.jp/student/approval/company/index">
+						<span class="top-content-detail">
 							<p class="num"><span class="icon"><img src="../image/common/iconBlue-check-circle.svg" alt=""></span><span class="txt openSans">0</span></p>
 							<p class="sml">承認したオファー</p>
+						</span>
 						</a>
 					</li>
 					<li><a href="http://dev.metsukete.jp/student/favorite/company/index">
+						<span class="top-content-detail">
 							<p class="num"><span class="icon"><img src="../image/common/iconBlue-star.svg" alt=""></span><span class="txt openSans">0</span></p>
 							<p class="sml">お気に入り<br class="no-pc">登録してくれた企業</p>
-						</a>
+						</span></a>
 					</li>
 				
 					<li><a href="http://dev.metsukete.jp/student/company/messages/index">
+						<span class="top-content-detail">
 							<p class="num"><span class="icon"><img src="../image/common/iconBlue-magnifying-glass.svg" alt=""></span><span class="txt openSans">0</span></p>
 							<p class="sml">新着メッセージ</p>
-						</a>
+						</span>
+					</a>
 					</li>
 					<li><a href="http://dev.metsukete.jp/student/analysis/result">
+						<span class="top-content-detail">
 						<p class="num"><span class="icon"><img src="../image/common/iconBlue-balloon.svg" alt=""></span><span class="txt openSans">0</span></p>
 						<p class="sml">他己分析に回答した人</p>
-					</a>
+					</span>
+				</a>
 				</li>
 				</ul>
+			</div>
 				<!-- オファー一覧 -->
 				<section class="companyBox">
 					<div class="comTtlBox01">
@@ -358,7 +379,7 @@
 					
 				</section>
 				<!-- START グラフ -->
-				<div class="secBox secBox01">
+				<div class="secBox secBox01 top-content-tablet">
 	
 					<!-- メッセージ一覧 -->
 					<section class="message">
