トップページのタブレットサイズフッターナビを作成

--- a/html/top.html
+++ b/html/top.html
@@ -50,7 +50,7 @@
         </ul>
     </nav>
 </div>
-
+<div class="responsive-headerMenu">
 <div class="menu on"><span></span><span></span><span></span></div>
 <div class="notice-user-box">
 <div class="icon bell modal-open" data-target="data-notice"><img class="bellUsually click" src="../image/common/header-icon-grayBell.png" alt=""><img src="../image/common/header-icon-blueBell.svg" alt="" class="hover"><img src="../image/common/header-icon-blueBell.svg" alt="" class="bellOpen"><span class="bell-notice"></span></div>
@@ -67,6 +67,7 @@
 		</a>
 </div>
 
+</div>
 </div>
 <div class="modal notice-modal modal-outer">
 	<div class="modal-container notice">
@@ -382,7 +383,7 @@
 				<div class="secBox secBox01 top-content-tablet">
 	
 					<!-- メッセージ一覧 -->
-					<section class="message">
+					<section class="message profile">
 						<div class="comTtlBox02">
 						<h3 class="headLine01"><span class="txt01">未入力のプロフィール項目</span></h3>
 						<div class="subTtl">
@@ -484,14 +485,25 @@
 
 			</div>
 		</main>
-		<footer id="gFooter">
+		<div id="gFooter">
 			<ul class="fLinkList">
     <li><a href="https://www.e-value.jp/" target="_blank" rel="noopener noreferrer">運営会社</a></li>
     <li><a href="https://www.e-value.jp/privacy-policy/"  target="_blank" rel="noopener noreferrer">プライバシーポリシー</a></li>
 </ul>
 <address class="openSans">
     &copy;Metsukete
-</address>		</footer>
+</address>		</div>
+<footer id="Footer">
+	<nav id="fNavi">
+		<ul>
+			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayHome.svg" alt=""><img src="../image/common/header-icon-blueHome.svg" alt="" class="choice"></span><span>ホーム</span></a></li>
+			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayAirplane.svg" alt=""><img src="../image/common/header-icon-blueAirplane.svg" alt="" class="choice"></span><span>企業オファー</span></a></li>
+			<li><a href=""><span class="icon"><img src="../image/top-page/footer-icon-gray-bubble.svg" alt=""><img src="../image/top-page/footer-icon-blue-bubble.svg" alt="" class="choice"></span><span>メッセージ</span></a></li>
+			<li><a href=""><span class="icon"><img src="../image/common/header-icon-graySetting.svg" alt=""><img src="../image/common/header-icon-blueSetting.svg" alt="" class="choice"></span><span>設定</span></a></li>
+			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayDot.svg" alt=""><img src="../image/common/header-icon-blueDot.svg" alt="" class="choice"></span><span>その他</span></a></li>
+		</ul>
+	</nav>
+</footer>
 	</div>
 	<script src="../js/jquery-3.6.0.min.js"></script>
 	<script src="../js/ofi.min.js"></script>
