トップの一次完成時に、保存し忘れたhtmlファイルがあったので保存

--- a/html/top.html
+++ b/html/top.html
@@ -390,7 +390,8 @@
 						</li>
 						<li>
 							<div class="photoBox">
-							<div class="photo"><a href="http://dev.metsukete.jp/student/company/profile/4" class="objectImg"><img src="../image/common/logo.svg" alt=""></a></div>
+							<div class="photo"><a href="http://dev.metsukete.jp/
+								student/company/profile/4" class="objectImg"><img src="../image/common/logo.svg" alt=""></a></div>
 								
 						</div>
 							<div class="textBox">
