レスポンシブフッターナビゲーションの通知マークと、スマホのナビゲーションを追加

--- a/html/top.html
+++ b/html/top.html
@@ -166,7 +166,7 @@
 					<span class="objectImg"><img src="../image/top-page/responsive/User-icon.svg" alt=""></span>
 				</div>
 				<div class="User-detail-box">
-				<p class="userName">小西 奏<span>〇〇大学／◯学部／◯学科／所属部活</span></p>	
+				<p class="userName">小西 奏<span>運動大学／スポーツ推進学部／スポーツ科学学科／レスリング部</span></p>	
 			</div>
 			<span class="responsive-arrow"><img src="../image/common/hUserBox-modal-arrow.svg" alt=""></span>
 			</a>
@@ -538,11 +538,11 @@
 <footer id="Footer">
 	<nav id="fNavi">
 		<ul>
-			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayHome.svg" alt=""><img src="../image/common/header-icon-blueHome.svg" alt="" class="choice"></span><span>ホーム</span></a></li>
-			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayAirplane.svg" alt=""><img src="../image/common/header-icon-blueAirplane.svg" alt="" class="choice"></span><span>企業オファー</span></a></li>
-			<li><a href=""><span class="icon"><img src="../image/top-page/footer-icon-gray-bubble.svg" alt=""><img src="../image/top-page/footer-icon-blue-bubble.svg" alt="" class="choice"></span><span>メッセージ</span></a></li>
-			<li><a href=""><span class="icon"><img src="../image/common/header-icon-graySetting.svg" alt=""><img src="../image/common/header-icon-blueSetting.svg" alt="" class="choice"></span><span>設定</span></a></li>
-			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayDot.svg" alt=""><img src="../image/common/header-icon-blueDot.svg" alt="" class="choice"></span><span>その他</span></a></li>
+			<li><a href=""><span class="icon"><span class="fNavi-notice">1</span><img src="../image/common/header-icon-blueHome.svg" alt="" class="choice current"></span><span class="fnavi-headlign">ホーム</span></a></li>
+			<li><a href=""><span class="icon"><span class="fNavi-notice">1</span><img src="../image/common/header-icon-grayAirplane.svg" alt=""><img src="../image/common/header-icon-blueAirplane.svg" alt="" class="choice"></span class="fnavi-headlign"><span>企業オファー</span></a></li>
+			<li><a href=""><span class="icon"><span class="fNavi-notice">1</span><img src="../image/top-page/footer-icon-gray-bubble.svg" alt=""><img src="../image/top-page/footer-icon-blue-bubble.svg" alt="" class="choice"></span class="fnavi-headlign"><span>メッセージ</span></a></li>
+			<li><a href=""><span class="icon"><span class="fNavi-notice">1</span><img src="../image/common/header-icon-graySetting.svg" alt=""><img src="../image/common/header-icon-blueSetting.svg" alt="" class="choice"></span><span class="fnavi-headlign">設定</span></a></li>
+			<li><a href=""><span class="icon"><img src="../image/common/header-icon-grayDot.svg" alt=""><img src="../image/common/header-icon-blueDot.svg" alt="" class="choice"></span><span class="fnavi-headlign">その他</span></a></li>
 		</ul>
 	</nav>
 </footer>
