一旦フォーム入力部分を途中まで作成

--- a/html/login.html
+++ b/html/login.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1.0, minimum-scale=1.0>
-  <title>Metsukete Athlete</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="description" content="#">
+	<meta name="keywords" content="#">
+  <title>ログイン｜Metsukete Athlete ミツケテアスリート
+
+  </title>
+  <!-- ファビコン追加予定 -->
+  <link rel="icon" href="/icon-svg.svg" >
+  <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
+  <link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
+  <link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -50,12 +62,12 @@
           <a class="link forgetPass" href="#">パスワードを忘れた方</a>
         </div>
 
-        <ul class="submit">
-          <li class="bgGradation">
+        <ul class="login-signUp">
+          <li class="bgGradation submit">
          <input type="submit" value="ログイン" name="login">
          </li>
          <li class="bgWhite">
-          <input type="submit" value="新規登録" name="signup">
+          <input type="button" value="新規登録" name="signUp">
          </li>
         </ul>
       </form>
@@ -70,7 +82,9 @@
 <script src="../js/edit-box.js"></script>
 
 <!-- 入力に間違いがあった際のエラー -->
+
 <script src="../js/form-error.js"></script>
+
 
   <script src="https://kit.fontawesome.com/18c6f6a850.js" crossorigin="anonymous"></script>
 </body>
