--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1.0, minimum-scale=1.0">
-  <title>Metsukete Athlete</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="description" content="#">
+	<meta name="keywords" content="#">
+  <title>ログイン｜Metsukete Athlete ミツケテアスリート
+
+  </title>
+  <!-- ファビコン追加予定 -->
+  <link rel="icon" href="/icon-svg.svg" >
+  <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
+  <link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
+  <link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -111,7 +123,7 @@
           <dd class="err-msg-birthday"></dd>
           <dt>電話番号をご入力ください</dt>
           <dd>
-            <input type="phone-number" class="telBox" name="phone-number" placeholder="例：080-0000-0000">
+            <input type="tel" class="telBox" name="phone-number" placeholder="例：080-0000-0000">
           </dd>
           <dd class="err-msg-tel"></dd>
 
@@ -129,7 +141,7 @@
 
         <ul class="submit noField">
           <li class="bgGradation">
-         <input type="submit" value="新規登録" name="resettingPass">
+         <input type="submit" value="新規登録" name="signUp">
          </li>
          <li class="Back-link">
           <a class="link LoginBack" href="#">ログイン画面に戻る</a>
