--- a/html/resetting-pass-frist.html
+++ b/html/resetting-pass-frist.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1.0, minimum-scale=1.0">
-  <title>Metsukete Athlete</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="description" content="#">
+	<meta name="keywords" content="#">
+  <title>パスワード再設定｜Metsukete Athlete ミツケテアスリート
+
+  </title>
+  <!-- ファビコン追加予定 -->
+  <link rel="icon" href="/icon-svg.svg" >
+  <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
+  <link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
+  <link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -61,7 +73,7 @@
                   <option value="Dec">12月</option>
                   </select>
                 </label>
-              <label for="day" class="select-birthDay day">
+              <label for="day" class="select-birthDay">
                 <select id="day" name="day">
                   <option value="selected" selected>- - -</option>
                   <option value="1">1日</option>
@@ -114,7 +126,7 @@
 
         <ul class="submit">
           <li class="bgGradation">
-         <input type="submit" value="パスワード再設定" name="resettingPass">
+         <input type="submit" value="パスワード再設定" name="resettingPass-btn">
          </li>
          <li class="Back-link">
           <a class="link LoginBack" href="#">ログイン画面に戻る</a>
@@ -132,6 +144,7 @@
 
 <!-- 入力に間違いがあった際のエラー -->
 <script src="../js/form-error.js"></script>
+
 
 
   <script src="https://kit.fontawesome.com/18c6f6a850.js" crossorigin="anonymous"></script>
