--- a/html/resetting-pass-second.html
+++ b/html/resetting-pass-second.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1.0, minimum-scale=1.0">
-  <title>Metsukete Athlete</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="description" content="#">
+	<meta name="keywords" content="#">
+  <title>パスワード再設定｜Metsukete Athlete ミツケテアスリート
+
+  </title>
+  <!-- ファビコン追加予定 -->
+  <link rel="icon" href="/icon-svg.svg" >
+  <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
+  <link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
+  <link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -24,7 +36,7 @@
           <dt>新しいパスワードをご入力ください</dt>
           <dd>
             <div class="password">
-              <input type="password" class="passwordBox" name="password" placeholder="半角英数字8文字以上でご入力ください">
+              <input type="password" id="password" class="passwordBox" name="password" placeholder="半角英数字8文字以上でご入力ください">
               <span class="eye passwordToggle">
                   <img class="password-icon" src="../image/common/icon-login-eye.svg" alt="パスワードを見るアイコン">
               </span>
@@ -34,7 +46,7 @@
           <dt>新しいパスワードをご入力ください（確認）</dt>
           <dd>
             <div class="password">
-              <input type="password" class="passwordBoxRe" name="password" placeholder="半角英数字8文字以上でご入力ください">
+              <input type="password" id="confirm_password" class="passwordBoxRe" name="password" placeholder="半角英数字8文字以上でご入力ください">
               <span class="eye passwordToggle">
                   <img class="password-icon" src="../image/common/icon-login-eye.svg" alt="パスワードを見るアイコン">
               </span>
@@ -73,6 +85,7 @@
 
 <!-- 入力に間違いがあった際のエラー -->
 <script src="../js/form-error.js"></script>
+
 
   <script src="https://kit.fontawesome.com/18c6f6a850.js" crossorigin="anonymous"></script>
 </body>
