--- a/html/top.html
+++ b/html/top.html
@@ -11,10 +11,11 @@
 
 </title>
 <!-- ファビコン追加予定 -->
-	<link rel="icon" sizes="16x16" href="#">
-	<link rel="icon" sizes="32x32" href="#">
-	<link rel="apple-touch-icon" href="#">
-	<link rel="shortcut icon" href="#">
+<link rel="icon" href="/icon-svg.svg" >
+<link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
+<link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
+<link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+
 	<!-- 読み込んだCSS -->
 	<link rel="stylesheet" type="text/css" href="../css/common/layout.css">
 	<link rel="stylesheet" type="text/css" href="../css/common/general.css">
