企業オファー一覧ページを9割完成

--- a/html/top.html
+++ b/html/top.html
@@ -84,6 +84,7 @@
 		<div class="headLine-notice">お知らせ</div>
 	
 	</div>
+	<div class="notice-container">
 		<ul class="notice-box">
 			<li>
 				<a class="notice-content unread" href="#">
@@ -176,9 +177,9 @@
 			</a>
 			</li>
 		</ul>
-		<div class="moreLink"><a href="#"><span class="moreLink-text">もっと見る</span></a></div>
-
+	
 		<!-- ページネーション -->
+		<div class="modal-pageNavi-box">
 		<ul class="modal pagination">
 			<li class="prev"><a href="#"><img src="../image/common/modal-pageNation-back.svg" alt="ページネーション前へボタン"></a></li>
 			<li class="page-number choice"><a href="#">1</a></li>
@@ -186,6 +187,10 @@
 			<li class="page-number"><a href="#">3</a></li>
 			<li class="next"><a href="#"><img src="../image/common/modal-pageNation-next.svg" alt="ページネーション次へボタン"></a></li>
 		  </ul>
+		</div>
+	</div>
+		<div class="moreLink"><a href="#"><span class="moreLink-text">もっと見る</span></a></div>
+
 	  </div>
 	</div>
   </div>
