--- a/html/resetting-pass-second.html
+++ b/html/resetting-pass-second.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="../css/resetting-pass.css">
 </head>
-<body>
+<body class="password-page">
 
   <div class="content">
     <div class="login-container">
@@ -46,13 +46,13 @@
           <dt>新しいパスワードをご入力ください（確認）</dt>
           <dd>
             <div class="password">
-              <input type="password" id="confirm_password" class="passwordBoxRe" name="password" placeholder="半角英数字8文字以上でご入力ください">
+              <input type="password" id="confirm_password" class="passwordBox" name="password" placeholder="半角英数字8文字以上でご入力ください">
               <span class="eye passwordToggle">
                   <img class="password-icon" src="../image/common/icon-login-eye.svg" alt="パスワードを見るアイコン">
               </span>
           </div>
           </dd>
-          <dd class="err-msg-pass"></dd>
+          <dd class="err-msg-pass err-msg-confirm-pass"></dd>
         </dl>
 
         <div class="loginDetail">
@@ -85,6 +85,7 @@
 
 <!-- 入力に間違いがあった際のエラー -->
 <script src="../js/form-error.js"></script>
+
 
 
   <script src="https://kit.fontawesome.com/18c6f6a850.js" crossorigin="anonymous"></script>
