タブレットの修正完了

--- a/html/company-offer.html
+++ b/html/company-offer.html
@@ -501,7 +501,7 @@
                                             <p class="ttl">
                                                 <span class="offer-listImg noread favorite">
                                                     <img src="../image/common/company-offer-bubble-line.svg" alt=""></span>
-                                                <a href="http://dev.metsukete.jp/student/company/messages/3" class="txt favorite"><span>株式会社サンプルがお気に入りに登録しました</span><span class="time resp">2023-10-27 10:43:37</span></a></p>
+                                                <a href="http://dev.metsukete.jp/student/company/messages/3" class="txt-favorite"><span>株式会社サンプル株式会社サンプルがお気に入りに登録しました</span><span class="time resp">2023-10-27 10:43:37</span></a></p>
                                                 <div class="status status01 state-favo"><span>承認中</span></div>
                     
 
