企業オファーページを最終修正完了して完成

--- a/html/company-info.html
+++ b/html/company-info.html
@@ -18,10 +18,10 @@
 </title>
 
     <!-- ファビコン -->
-    <link rel="icon" href="/icon-svg.svg" >
     <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180"> 
     <link rel="apple-touch-icon" href="/apple-icon-152px.png" sizes="152x152">
     <link rel="shortcut icon" href="/favicon.ico" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="/icon-svg.svg" >
 
     <!-- cs -->
     <link rel="stylesheet" type="text/css" href="http://dev.metsukete.jp/js/simplebar.css">
@@ -305,8 +305,9 @@
 					<div class="ttlBox">
                         <img src="../image/common/header-icon-blueAirplane.svg" alt="ページタイトルの飛行機アイコン">
     <h2>Metsukete株式会社</h2>
-    <p class="subTtl"></p>
 </div>
+    <div class="subTtl"></div>
+
 <div class="backBtn"><a href="http://dev.metsukete.jp/student/company/index">企業オファー一覧に戻る</a></div>				
 				<!-- メッセージ -->
 				            </div>
@@ -397,7 +398,7 @@
 
                         <!-- オファー承認済み -->
                         <div class="fixBox">
-                            <div class="comLinkBox02 boxStyle02 ">
+                            <div class="comLinkBox02 boxStyle03 ">
                                 <div class="leftBox">
                                     <p class="ttl">オファー承認済み</p>
                                     <ul class="btnList">
@@ -437,11 +438,11 @@
         <p class="sml">専門コンサルタント</p>
     </div>
     <ul class="btnList multi hpLink">
-        <li><a class="refuse  bgGradation" href="http://dev.metsukete.jp/student/company/messages/3">
-            <img src="../image/common/icon-btnLink.svg" alt="リンクアイコンイメージ">
+        <li><a class="hpLink line" href="http://dev.metsukete.jp/student/company/messages/3">
+            <img src="../image/common/icon-btnLink-black.svg" alt="リンクアイコンイメージ黒">
             <span>企業HP</span></a></li>
-        <li><a class="refuse bgGradation" href="http://dev.metsukete.jp/student/company/messages/3">
-            <img src="../image/common/icon-btnLink.svg" alt="リンクアイコンイメージ">
+        <li><a class="hpLink line" href="http://dev.metsukete.jp/student/company/messages/3">
+            <img src="../image/common/icon-btnLink-black.svg" alt="リンクアイコンイメージ黒">
             <span>採用HP</span></a></li>
 
     </ul>
